# bundle_adjustment

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
cmake/: CMakeCache.txt  download_libtorch.cmake
include/bundleadjust/: BAConstraint.h  BalDataloader.h  BundleAdjustment.h  Dataloader.h  FeatureDetector.h  HarrisDetector.h  KinectDataloader.h  MeshWriter.h  PointMatching.h  ProcrustesAligner.h  ShiTomasiDetector.h  SiftDetector.h  util.h
include/harris/: BalDataloader.h  BundleAdjustment.h  harris.h
init_meshes/: 0_to_1.ply  0_to_10.ply  0_to_11.ply  0_to_12.ply  0_to_13.ply  0_to_14.ply  0_to_15.ply  0_to_16.ply  0_to_17.ply  0_to_2.ply  0_to_22.ply  0_to_23.ply  0_to_29.ply  0_to_3.ply  0_to_34.ply  0_to_35.ply  0_to_36.ply  0_to_39.ply  0_to_4.ply  0_to_40.ply  0_to_41.ply  0_to_42.ply  0_to_43.ply  0_to_45.ply  0_to_46.ply  0_to_47.ply  0_to_48.ply  0_to_5.ply  0_to_51.ply  0_to_52.ply  0_to_54.ply  0_to_55.ply  0_to_56.ply  0_to_57.ply  0_to_58.ply  0_to_59.ply  0_to_6.ply  0_to_60.ply  0_to_61.ply  0_to_62.ply  (+18 more)
src/: BAConstraint.cpp  BalDataloader.cpp  BundleAdjustment.cpp  CMakeLists.txt  FeatureDetector.cpp  KinectDataloader.cpp  MeshWriter.cpp  MeshWriterCallback.h  PointMatching.cpp  VirtualSensor.cpp  VirtualSensor.h  harris.cpp
src/detector/: FeatureDetector.cpp  HarrisDetector.cpp  ShiTomasiDetector.cpp  SiftDetector.cpp
tests/: CMakeLists.txt  procrustes_test.cpp
tests/get_color/: CMakeLists.txt  get_color_test.cpp
tests/matrix_assignment/: CMakeLists.txt  matrix_assignment_test.cpp
tests/num_matches/: CMakeLists.txt  num_matches_test.cpp
tests/procrustes/: CMakeLists.txt  procrustes_test.cpp
tests/visualize_match/: CMakeLists.txt  visualize_match_test.cpp
